# chemical-library-gifs

./: README.md  pyproject.toml
data/: example_compounds.csv  random_1000_1.csv
src/chemgifs/: main.py
src/chemgifs/tools/linux_x86/: mol2svg
src/chemgifs/tools/macosx_x86/: mol2svg
src/tools/macosx_arm64/: mol2svg
tests/: sample.csv  test_basic.py
