[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chemgifs"
version = "0.1.0"
description = "Produce GIF files for a chemical collection"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name="Miquel Duran-Frigola", email="miquel@ersilia.io"}
]
requires-python = ">=3.12"

dependencies = [
  "numpy>=1.21",
  "cairosvg==2.8.2"
]

[tool.setuptools.packages.find]
where = ["src"]
